--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
           node-version: 16
       - name : Run variable.js file 
         run :
-              node variable.js
+              node variables.js
